# chola

./: .envrc  .gitignore  Cargo.toml  JustFile  NOTICE  README.md
config/: controller.example.yaml  opensearch-ilm-policy.json  vector.toml  worker-1.example.yaml  worker-2.example.yaml
crates/ci-controller/: Cargo.toml  crate.nix
crates/ci-controller/src/: csrf.rs  dag.rs  grpc_server.rs  http_server.rs  job_group_registry.rs  job_registry.rs  log_aggregator.rs  main.rs  monitoring.rs  notifier.rs  openapi.rs  rate_limit.rs  redis_store.rs  reservation.rs  retention.rs  scheduler.rs  state.rs  storage.rs  worker_registry.rs
crates/ci-controller/src/api/: analytics_handlers.rs  api_key_handlers.rs  artifact_handlers.rs  audit.rs  auth_handlers.rs  badge_handlers.rs  blacklist_handlers.rs  dashboard_handlers.rs  error.rs  job_group_handlers.rs  job_handlers.rs  label_group_handlers.rs  log_handlers.rs  mod.rs  notification_handlers.rs  repo_handlers.rs  resource_handlers.rs  schedule_handlers.rs  script_handlers.rs  settings_handlers.rs  user_handlers.rs  variable_handlers.rs  webhook_handlers.rs  worker_handlers.rs  worker_token_handlers.rs
crates/ci-controller/src/auth/: jwt.rs  middleware.rs  password.rs
crates/ci-core/: Cargo.toml  build.rs  crate.nix
crates/ci-core/proto/: orchestrator.proto
crates/ci-core/src/: errors.rs  lib.rs  proto.rs
crates/ci-core/src/models/: api_key.rs  config.rs  job.rs  job_group.rs  mod.rs  schedule.rs  stage.rs  user.rs  variable.rs  worker.rs
crates/ci-job-runner/: Cargo.toml
crates/ci-job-runner/src/: main.rs
crates/ci-job-runner/src/commands/: cancel.rs  logs.rs  mod.rs  reserve.rs  run.rs  status.rs  submit.rs
crates/ci-worker/: Cargo.toml
crates/ci-worker/src/: agent.rs  executor.rs  grpc_client.rs  heartbeat.rs  http_server.rs  log_streamer.rs  main.rs  reconnect.rs  stage_runner.rs
docs/: USAGE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: analytics.ts  audit.ts  auth.ts  blacklist.ts  builds.ts  client.ts  dashboard.ts  index.ts  jobs.ts  labelGroups.ts  repos.ts  runs.ts  scripts.ts  settings.ts  users.ts  workerTokens.ts  workers.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/log/: LogViewer.tsx
frontend/src/components/ui/: ChangePasswordDialog.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  FilterBar.tsx  LoadingSkeleton.tsx  PageSkeleton.tsx  Pagination.tsx  ResourceBar.tsx  SearchDialog.tsx  SearchResult.tsx  SkipToContent.tsx  Sparkline.tsx  StageMetadata.tsx  StageTimeline.tsx  StatCard.tsx  StatusBadge.tsx  TimeAgo.tsx  index.ts
frontend/src/hooks/: useInactivityTimeout.ts  useKeyboardShortcuts.ts  useLiveLog.ts  usePermission.ts  useUrlFilters.test.ts  useUrlFilters.ts
frontend/src/pages/: AnalyticsPage.tsx  AuditLogPage.tsx  BlacklistPage.tsx  BuildDetailPage.tsx  BuildQueuePage.tsx  BuildsPage.tsx  DashboardPage.tsx  LabelGroupsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  RepoDetailPage.tsx  ReposPage.tsx  RunsPage.tsx  SettingsPage.tsx  TokensPage.tsx  UsersPage.tsx  WorkerTokensPage.tsx  WorkersPage.tsx
frontend/src/router/: ProtectedRoute.tsx  RoleGuard.tsx  index.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: analytics.ts  blacklist.ts  build.ts  dashboard.ts  error.ts  index.ts  job.ts  stage.ts  user.ts  worker.ts
frontend/src/utils/: duration.ts
migrations/: 001_create_repos.sql  001_init_schema.sql  002_create_stage_configs.sql  002_init_jobs.sql  003_create_stage_scripts.sql  003_init_workers.sql  004_create_job_groups.sql  004_users_and_auth.sql  005_create_jobs.sql  005_indexes_and_cascades.sql  005_notifications.sql  005_pipeline_variables.sql  006_create_worker_reservations.sql  006_webhooks.sql  007_create_workers.sql  008_stage_depends_on.sql  010_cron_schedules.sql  011_partial_indexes.sql  012_api_keys.sql  012_priority_labels.sql  013_webhook_deliveries.sql  014_job_retry.sql  015_pr_number.sql  016_stage_resource_history.sql  017_retention_cascade.sql  018_blacklists.sql  019_new_features.sql  020_config_settings.sql  021_nullable_stage_config_id.sql  022_nullable_repo_id.sql  023_worker_system_info.sql  024_command_mode.sql  025_global_scripts.sql  026_idempotency_key.sql  027_expired_state_and_resources.sql  028_worker_management.sql  029_token_worker_binding.sql  030_status_reason.sql  031_script_locking.sql  032_worker_priority_limits.sql
nix/modules/: devshell.nix  rust.nix
