[workspace]
resolver = "2"
members = [
    "crates/ci-core",
    "crates/ci-controller",
    "crates/ci-worker",
    "crates/ci-job-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ci-core = { path = "crates/ci-core" }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
thiserror = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde_json = "1.0"
axum = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
libc = "0.2"
argon2 = "0.5"
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors", "fs"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
