[package]
name = "chola-controller"
description = "chola-controller"
version.workspace = true
edition.workspace = true

[features]
default = ["swagger-ui"]
swagger-ui = ["dep:utoipa-swagger-ui"]

[[bin]]
name = "chola-controller"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tower-http = { workspace = true }
axum-server = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
mime_guess = { workspace = true }
