[package]
name = "chola-job-runner"
description = "CLI tool to submit jobs to Chola CI Controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chola-job-runner"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }