[package]
name = "chola-worker"
description = "chola-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chola-worker"
path = "src/main.rs"

[dependencies]
ci-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
libc = "0.2"
sysinfo = { workspace = true }
reqwest = { workspace = true }
